Create Fourier_img-[diff year]-[diff harmonic]

--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Detemine the best Harmonic number.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_2_Detemine the best Harmonic number.ipynb
@@ -16048,7 +16048,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing and unpacking year_2015_2019_Harmonic_1!  ==>1/150\n"
+      "Computing and unpacking year_2015_2019_Harmonic_1!  ==>1/150\n",
+      "calculation on [2015_2019,1,99,EVI] was not successful! ==>1/150 \n"
      ]
     }
    ],
@@ -16112,7 +16113,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Residule"
+   ]
   },
   {
    "cell_type": "code",
