Fourier_img-[diff year]-[diff harmonic]

--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Generate_1987_2019_Fourier_img.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Generate_1987_2019_Fourier_img.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,34 +109,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('2005-01-01', '2007-12-31'),\n",
-       " ('2008-01-01', '2010-12-31'),\n",
-       " ('2011-01-01', '2013-12-31'),\n",
-       " ('2014-01-01', '2016-12-31'),\n",
-       " ('2017-01-01', '2019-12-31')]"
+       "[('1987-01-01', '1989-12-31'),\n",
+       " ('1990-01-01', '1992-12-31'),\n",
+       " ('1993-01-01', '1995-12-31'),\n",
+       " ('1996-01-01', '1998-12-31'),\n",
+       " ('1999-01-01', '2001-12-31'),\n",
+       " ('2002-01-01', '2004-12-31')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "year_range[6:]"
+    "year_range[:6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('2002-01-01', '2004-12-31'),\n",
+       " ('1999-01-01', '2001-12-31'),\n",
+       " ('1996-01-01', '1998-12-31'),\n",
+       " ('1993-01-01', '1995-12-31'),\n",
+       " ('1990-01-01', '1992-12-31'),\n",
+       " ('1987-01-01', '1989-12-31')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year_range[:6][::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,31 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analyzing the images of 2017_2019\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2017_2019_harmonic_3\n",
-      "Analyzing the images of 2014_2016\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2014_2016_harmonic_3\n",
-      "Analyzing the images of 2011_2013\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2011_2013_harmonic_3\n",
-      "Analyzing the images of 2008_2010\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2008_2010_harmonic_3\n",
-      "Analyzing the images of 2005_2007\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2005_2007_harmonic_3\n",
       "Analyzing the images of 2002_2004\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2002_2004_harmonic_3\n"
+      "Exporting users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_2002_2004_harmonic_3\n",
+      "Analyzing the images of 1999_2001\n",
+      "Exporting users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1999_2001_harmonic_3\n",
+      "Analyzing the images of 1996_1998\n",
+      "Exporting users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1996_1998_harmonic_3\n",
+      "Analyzing the images of 1993_1995\n",
+      "Exporting users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1993_1995_harmonic_3\n",
+      "Analyzing the images of 1990_1992\n",
+      "Exporting users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1990_1992_harmonic_3\n",
+      "Analyzing the images of 1987_1989\n",
+      "Exporting users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1987_1989_harmonic_3\n"
      ]
     }
    ],
    "source": [
     "# reverse the year_range order so that the most recent will be exported first    \n",
-    "for span in year_range[5:][::-1]:\n",
+    "for span in year_range[:6][::-1]:\n",
     "    \n",
     "    start = span[0]\n",
     "    end   = span[1]\n",
@@ -194,7 +213,7 @@
     "    span_name = f'{start.split(split)[0]}_{end.split(split)[0]}'\n",
     "\n",
     "    # define the asset path for exporting\n",
-    "    asset_path = 'users/wang8052664/North_China_Plain/Fourier_imgs'\n",
+    "    asset_path = 'users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3'\n",
     "    # define the name for exporting\n",
     "    export_name = f'Fourier_img_{span_name}_harmonic_3'\n",
     "\n",
@@ -284,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
