Create select points from 50K samples

--- a/Process_1_Prepare_sample_point/Sub_Process_2_Create_Samples_from_50000/Python_Script/Version_2_GEE_Create_Sample_Point_From_50k_to_10k.ipynb
+++ b/Process_1_Prepare_sample_point/Sub_Process_2_Create_Samples_from_50000/Python_Script/Version_2_GEE_Create_Sample_Point_From_50k_to_10k.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -88,6 +88,7 @@
    ],
    "source": [
     "NDVI_hist = {}\n",
+    "year_span = []\n",
     "\n",
     "for span in year_range[::-1]:\n",
     "    \n",
@@ -97,6 +98,8 @@
     "    \n",
     "    split = '-'\n",
     "    span_name = f'{start.split(split)[0]}_{end.split(split)[0]}'\n",
+    "    \n",
+    "    year_span.append(span_name)\n",
     "        \n",
     "#     # Fetch the NDVI value \n",
     "#     NDVI = ee.Image(f'users/wensomone666/Jinzhu/Mean_NDVI/Year_{span_name}_Mean_NDVI').clip(North_china_plain_boundary)\n",
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +277,7 @@
        "[817 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,10 +377,10 @@
     "                                 geometries = True)\n",
     "    \n",
     "    # export \n",
-    "    task = ee.batch.Export.table.toAsset(   collection  = Sample_50k,\n",
-    "                                            description = f'Exporting {asset_name}',\n",
-    "                                            assetId     = f'{Path}/{asset_name}')\n",
-    "    task.start()\n",
+    "#     task = ee.batch.Export.table.toAsset(   collection  = Sample_50k,\n",
+    "#                                             description = f'Exporting {asset_name}',\n",
+    "#                                             assetId     = f'{Path}/{asset_name}')\n",
+    "#     task.start()\n",
     "    \n",
     "    # print out the process\n",
     "    print(f'{asset_name} exprted sucessfully')"
@@ -396,6 +399,250 @@
    "source": [
     "##### Compute the sample_select "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fetch all 50K sample point\n",
+    "Sample_50k_point = [ee.FeatureCollection(f'{path}/Sample_50K_year_{year_name}')\n",
+    "                   for path in ['users/wangjinzhulala/North_China_Plain_Python/Sample_50K']\n",
+    "                   for year_name in year_span]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ee.featurecollection.FeatureCollection at 0x22c6bdd6e80>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd6ef0>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd6898>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd6860>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd6828>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd68d0>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd6358>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd65c0>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd6e10>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd63c8>,\n",
+       " <ee.featurecollection.FeatureCollection at 0x22c6bdd6da0>]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for year in year_span:\n",
+    "    \n",
+    "    NDVI = NDVI_hist_df[NDVI_hist_df['Year_range'] == year]['NDVI'].values\n",
+    "    Freq = NDVI_hist_df[NDVI_hist_df['Year_range'] == year]['Freq'].values\n",
+    "    Num  = NDVI_hist_df[NDVI_hist_df['Year_range'] == year]['Select_num'].values\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017_2019 -16 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 -15 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 -14 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 -13 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 -12 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 -11 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 -10 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 -9 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 -8 has less than 6 select points, so skip select at this NDVI value.\n",
+      "Year2017_2019 NDVI -7 have 7/7 from select_num. Opts ==>10/817\n",
+      "Year2017_2019 NDVI -6 have 12/12 from select_num. Opts ==>11/817\n",
+      "Year2017_2019 NDVI -5 have 16/16 from select_num. Opts ==>12/817\n",
+      "Year2017_2019 NDVI -4 have 28/28 from select_num. Opts ==>13/817\n",
+      "Year2017_2019 NDVI -3 have 32/32 from select_num. Opts ==>14/817\n",
+      "Year2017_2019 NDVI -2 have 34/34 from select_num. Opts ==>15/817\n",
+      "Year2017_2019 NDVI -1 have 30/30 from select_num. Opts ==>16/817\n",
+      "Year2017_2019 NDVI 0 have 66/66 from select_num. Opts ==>17/817\n",
+      "Year2017_2019 NDVI 1 have 38/38 from select_num. Opts ==>18/817\n",
+      "Year2017_2019 NDVI 2 have 44/44 from select_num. Opts ==>19/817\n",
+      "Year2017_2019 NDVI 3 have 43/43 from select_num. Opts ==>20/817\n",
+      "Year2017_2019 NDVI 4 have 68/68 from select_num. Opts ==>21/817\n",
+      "Year2017_2019 NDVI 5 have 86/86 from select_num. Opts ==>22/817\n",
+      "Year2017_2019 NDVI 6 have 115/115 from select_num. Opts ==>23/817\n",
+      "Year2017_2019 NDVI 7 have 135/135 from select_num. Opts ==>24/817\n",
+      "Year2017_2019 NDVI 8 have 192/192 from select_num. Opts ==>25/817\n",
+      "Year2017_2019 NDVI 9 have 248/248 from select_num. Opts ==>26/817\n",
+      "Year2017_2019 NDVI 10 have 352/352 from select_num. Opts ==>27/817\n",
+      "Year2017_2019 NDVI 11 have 478/478 from select_num. Opts ==>28/817\n",
+      "Year2017_2019 NDVI 12 have 614/614 from select_num. Opts ==>29/817\n",
+      "Year2017_2019 NDVI 13 have 716/716 from select_num. Opts ==>30/817\n",
+      "Year2017_2019 NDVI 14 have 818/818 from select_num. Opts ==>31/817\n",
+      "Year2017_2019 NDVI 15 have 842/842 from select_num. Opts ==>32/817\n",
+      "Year2017_2019 NDVI 16 have 893/893 from select_num. Opts ==>33/817\n",
+      "Year2017_2019 NDVI 17 have 838/838 from select_num. Opts ==>34/817\n",
+      "Year2017_2019 NDVI 18 have 765/765 from select_num. Opts ==>35/817\n",
+      "Year2017_2019 NDVI 19 have 680/680 from select_num. Opts ==>36/817\n",
+      "Year2017_2019 NDVI 20 have 592/592 from select_num. Opts ==>37/817\n",
+      "Year2017_2019 NDVI 21 have 465/465 from select_num. Opts ==>38/817\n",
+      "Year2017_2019 NDVI 22 have 333/333 from select_num. Opts ==>39/817\n",
+      "Year2017_2019 NDVI 23 have 207/207 from select_num. Opts ==>40/817\n",
+      "Year2017_2019 NDVI 24 have 106/106 from select_num. Opts ==>41/817\n",
+      "Year2017_2019 NDVI 25 have 49/49 from select_num. Opts ==>42/817\n",
+      "Year2017_2019 NDVI 26 have 23/23 from select_num. Opts ==>43/817\n",
+      "Year2017_2019 NDVI 27 have 12/12 from select_num. Opts ==>44/817\n",
+      "Year2017_2019 NDVI 28 have 7/7 from select_num. Opts ==>45/817\n",
+      "2017_2019 29 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 30 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 31 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 32 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 33 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 34 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 35 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 36 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 37 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 38 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 39 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2017_2019 40 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -20 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -19 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -18 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -17 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -16 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -15 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -14 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -13 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -12 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -11 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -10 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -9 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 -8 has less than 6 select points, so skip select at this NDVI value.\n",
+      "Year2014_2016 NDVI -7 have 7/7 from select_num. Opts ==>71/817\n",
+      "Year2014_2016 NDVI -6 have 10/10 from select_num. Opts ==>72/817\n",
+      "Year2014_2016 NDVI -5 have 14/14 from select_num. Opts ==>73/817\n",
+      "Year2014_2016 NDVI -4 have 33/33 from select_num. Opts ==>74/817\n",
+      "Year2014_2016 NDVI -3 have 32/32 from select_num. Opts ==>75/817\n",
+      "Year2014_2016 NDVI -2 have 33/33 from select_num. Opts ==>76/817\n",
+      "Year2014_2016 NDVI -1 have 31/31 from select_num. Opts ==>77/817\n",
+      "Year2014_2016 NDVI 0 have 65/65 from select_num. Opts ==>78/817\n",
+      "Year2014_2016 NDVI 1 have 35/35 from select_num. Opts ==>79/817\n",
+      "Year2014_2016 NDVI 2 have 42/42 from select_num. Opts ==>80/817\n",
+      "Year2014_2016 NDVI 3 have 44/44 from select_num. Opts ==>81/817\n",
+      "Year2014_2016 NDVI 4 have 71/71 from select_num. Opts ==>82/817\n",
+      "Year2014_2016 NDVI 5 have 95/95 from select_num. Opts ==>83/817\n",
+      "Year2014_2016 NDVI 6 have 122/122 from select_num. Opts ==>84/817\n",
+      "Year2014_2016 NDVI 7 have 148/148 from select_num. Opts ==>85/817\n",
+      "Year2014_2016 NDVI 8 have 223/223 from select_num. Opts ==>86/817\n",
+      "Year2014_2016 NDVI 9 have 317/317 from select_num. Opts ==>87/817\n",
+      "Year2014_2016 NDVI 10 have 458/458 from select_num. Opts ==>88/817\n",
+      "Year2014_2016 NDVI 11 have 617/617 from select_num. Opts ==>89/817\n",
+      "Year2014_2016 NDVI 12 have 788/788 from select_num. Opts ==>90/817\n",
+      "Year2014_2016 NDVI 13 have 888/888 from select_num. Opts ==>91/817\n",
+      "Year2014_2016 NDVI 14 have 937/937 from select_num. Opts ==>92/817\n",
+      "Year2014_2016 NDVI 15 have 883/883 from select_num. Opts ==>93/817\n",
+      "Year2014_2016 NDVI 16 have 848/848 from select_num. Opts ==>94/817\n",
+      "Year2014_2016 NDVI 17 have 763/763 from select_num. Opts ==>95/817\n",
+      "Year2014_2016 NDVI 18 have 669/669 from select_num. Opts ==>96/817\n",
+      "Year2014_2016 NDVI 19 have 584/584 from select_num. Opts ==>97/817\n",
+      "Year2014_2016 NDVI 20 have 467/467 from select_num. Opts ==>98/817\n",
+      "Year2014_2016 NDVI 21 have 338/338 from select_num. Opts ==>99/817\n",
+      "Year2014_2016 NDVI 22 have 216/216 from select_num. Opts ==>100/817\n",
+      "Year2014_2016 NDVI 23 have 120/120 from select_num. Opts ==>101/817\n",
+      "Year2014_2016 NDVI 24 have 54/54 from select_num. Opts ==>102/817\n",
+      "Year2014_2016 NDVI 25 have 20/20 from select_num. Opts ==>103/817\n",
+      "Year2014_2016 NDVI 26 have 10/10 from select_num. Opts ==>104/817\n",
+      "2014_2016 27 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 28 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 29 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 30 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 31 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 32 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 33 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 34 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2014_2016 35 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -51 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -50 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -49 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -48 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -47 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -46 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -45 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -44 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -43 has less than 6 select points, so skip select at this NDVI value.\n",
+      "2011_2013 -42 has less than 6 select points, so skip select at this NDVI value.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year2011_2013 NDVI -41 have 6/6 from select_num. Opts ==>124/817\n",
+      "Year2011_2013 NDVI -40 have 8/8 from select_num. Opts ==>125/817\n",
+      "Year2011_2013 NDVI -39 have 9/9 from select_num. Opts ==>126/817\n",
+      "Year2011_2013 NDVI -38 have 10/10 from select_num. Opts ==>127/817\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define the path to GEE-asset\n",
+    "path = 'users/wangjinzhulala/North_China_Plain_Python/Sample_50K'\n",
+    "\n",
+    "# create an empty dict to hold the coordinates of selected points\n",
+    "Select_pts = {year:[] for year in NDVI_hist_df['Year_range'].unique()}\n",
+    "\n",
+    "\n",
+    "for index,row in NDVI_hist_df.iterrows():\n",
+    "    \n",
+    "    # get necessary variables\n",
+    "    year = row['Year_range']\n",
+    "    nd   = row['NDVI']\n",
+    "    freq = row['Freq']\n",
+    "    num  = row ['Select_num']\n",
+    "    \n",
+    "    # if the select_num <= 5, skip the sampling\n",
+    "    if num <= 5:\n",
+    "        print(f'{year} {nd} has less than 6 select points, so skip select at this NDVI value.')\n",
+    "        continue\n",
+    "    \n",
+    "    # fetch the 50k sample\n",
+    "    sample_50k        = ee.FeatureCollection(f'{path}/Sample_50K_year_{year}')\n",
+    "    sample_50k_filter = sample_50k.filterMetadata('nd' ,'equals',10)\\\n",
+    "                                  .randomColumn('x').sort('x').limit(num).getInfo()\\\n",
+    "    \n",
+    "    # unpack the coordinate\n",
+    "    coors = [pt['geometry']['coordinates'] for pt in sample_50k_filter['features']]\n",
+    "                                \n",
+    "    # updata the coordinates dict\n",
+    "    Select_pts[year].append(coors)\n",
+    "    \n",
+    "    # print out the process\n",
+    "    print(f'Year{year} NDVI {nd} have {len(coors)}/{int(num)} from select_num. Opts ==>{index + 1}/{len(NDVI_hist_df)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
