Create cloud free imgs

--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Generate_1987_2019_Fourier_&_Cloud_Free_img.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Generate_1987_2019_Fourier_&_Cloud_Free_img.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,42 +120,29 @@
        " ('1993-01-01', '1995-12-31'),\n",
        " ('1996-01-01', '1998-12-31'),\n",
        " ('1999-01-01', '2001-12-31'),\n",
-       " ('2002-01-01', '2004-12-31')]"
+       " ('2002-01-01', '2004-12-31'),\n",
+       " ('2005-01-01', '2007-12-31'),\n",
+       " ('2008-01-01', '2010-12-31'),\n",
+       " ('2011-01-01', '2013-12-31'),\n",
+       " ('2014-01-01', '2016-12-31'),\n",
+       " ('2017-01-01', '2019-12-31')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "year_range[:6]"
+    "year_range"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('2002-01-01', '2004-12-31'),\n",
-       " ('1999-01-01', '2001-12-31'),\n",
-       " ('1996-01-01', '1998-12-31'),\n",
-       " ('1993-01-01', '1995-12-31'),\n",
-       " ('1990-01-01', '1992-12-31'),\n",
-       " ('1987-01-01', '1989-12-31')]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "year_range[:6][::-1]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -180,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +191,7 @@
    ],
    "source": [
     "# reverse the year_range order so that the most recent will be exported first    \n",
-    "for span in year_range[:6][::-1]:\n",
+    "for span in year_range[::-1]:\n",
     "    \n",
     "    start = span[0]\n",
     "    end   = span[1]\n",
@@ -231,18 +218,123 @@
     "    Fourier_img = Fourier_making.harmonicTrendCoefficients\n",
     "\n",
     "    # export the Fourier img\n",
-    "    task = ee.batch.Export.image.toAsset( \n",
-    "                                                image          = Fourier_img,\n",
-    "                                                description    = f'Exporting {export_name}',\n",
-    "                                                assetId        = f'{asset_path}/{export_name}',\n",
-    "                                                region         = North_china_plain_boundary.geometry().bounds(),\n",
-    "                                                scale          = 30,\n",
-    "                                                maxPixels      = int(1e13))\n",
-    "    task.start()\n",
+    "#     task = ee.batch.Export.image.toAsset( \n",
+    "#                                                 image          = Fourier_img,\n",
+    "#                                                 description    = f'Exporting {export_name}',\n",
+    "#                                                 assetId        = f'{asset_path}/{export_name}',\n",
+    "#                                                 region         = North_china_plain_boundary.geometry().bounds(),\n",
+    "#                                                 scale          = 30,\n",
+    "#                                                 maxPixels      = int(1e13))\n",
+    "#     task.start()\n",
     "\n",
     "    # print out the process\n",
     "    print(f'Exporting {asset_path}/{export_name}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step_2_Create_Cloud_Free_Img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exporting Landsat_cloud_free_2017_2019\n",
+      "Exporting Landsat_cloud_free_2014_2016\n",
+      "Exporting Landsat_cloud_free_2011_2013\n",
+      "Exporting Landsat_cloud_free_2008_2010\n",
+      "Exporting Landsat_cloud_free_2005_2007\n",
+      "Exporting Landsat_cloud_free_2002_2004\n",
+      "Exporting Landsat_cloud_free_1999_2001\n",
+      "Exporting Landsat_cloud_free_1996_1998\n",
+      "Exporting Landsat_cloud_free_1993_1995\n",
+      "Exporting Landsat_cloud_free_1990_1992\n",
+      "Exporting Landsat_cloud_free_1987_1989\n"
+     ]
+    }
+   ],
+   "source": [
+    "for span in year_range[::-1]:\n",
+    "    \n",
+    "    # find the end year to determine the \n",
+    "    start = span[0]\n",
+    "    end   = span[1]\n",
+    "    \n",
+    "    split = '-'\n",
+    "    span_name = f'{start.split(split)[0]}_{end.split(split)[0]}'\n",
+    "\n",
+    "    # define the asset path for exporting\n",
+    "    asset_path = 'users/wang8052664/Cloud_Free_Img'\n",
+    "    # define the name for exporting\n",
+    "    export_name = f'Landsat_cloud_free_{span_name}'\n",
+    "    \n",
+    "    \n",
+    "    # find the right Landsat RAW data set\n",
+    "    if int(end.split(split)[0]) <= 2010:\n",
+    "        Landsat_img = ee.ImageCollection(\"LANDSAT/LT05/C01/T1\")\n",
+    "        \n",
+    "    elif int(end.split(split)[0]) <= 2013:\n",
+    "        Landsat_img = ee.ImageCollection(\"LANDSAT/LE07/C01/T1\")\n",
+    "        \n",
+    "    else:\n",
+    "        Landsat_img = ee.ImageCollection(\"LANDSAT/LC08/C01/T1\")\n",
+    "        \n",
+    "    \n",
+    "    # create the cloud-free img using SimpleComposite\n",
+    "    Filtered_img = Landsat_img.filterBounds(North_china_plain_boundary)\\\n",
+    "                              .filterDate(start,end)\n",
+    "    \n",
+    "    cloud_free = ee.Algorithms.Landsat.simpleComposite(Filtered_img)\\\n",
+    "                              .clip(North_china_plain_boundary)\n",
+    "        \n",
+    "    # export\n",
+    "    task = ee.batch.Export.image.toAsset(   image       = cloud_free,\n",
+    "                                            description = f'Exporting {export_name}',\n",
+    "                                            assetId     = f'{asset_path}/{export_name}',\n",
+    "                                            region      = North_china_plain_boundary.geometry(),\n",
+    "                                            scale       = 30,\n",
+    "                                            maxPixels   = int(1e13))\n",
+    "    task.start()\n",
+    "    \n",
+    "    # print out the process\n",
+    "    print(f'Exporting {export_name}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -303,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
