Create NDVI NDBI EVI Landsat_TOA

--- a/Process_1_Prepare_sample_point/Sub_Process_1_Create_3_year_mean_NDVI/Python_Script/Create_3_year_Mean_NDVI_NDBI_EVI.ipynb
+++ b/Process_1_Prepare_sample_point/Sub_Process_1_Create_3_year_mean_NDVI/Python_Script/Create_3_year_Mean_NDVI_NDBI_EVI.ipynb
@@ -98,19 +98,19 @@
     "    range_name = f'{start_year}_{end_year}'\n",
     "\n",
     "    if end_year <= 2010:\n",
-    "        Landsat_img = ee.ImageCollection(\"LANDSAT/LT05/C01/T1\")\n",
+    "        Landsat_img = ee.ImageCollection(\"LANDSAT/LT05/C01/T1_TOA\")\n",
     "        ND_formula = {'NDVI':['B4','B3'],\n",
     "                          'NDBI':['B5','B4'],\n",
     "                          'EVI':\"2.5 * ((b('B4')-b('B3'))*1.0 / (b('B4')*1.0 + 6.0 * b('B3') - 7.5 * b('B1') + 1.0))\"}\n",
     "\n",
     "    elif end_year <= 2013:\n",
-    "        Landsat_img = ee.ImageCollection(\"LANDSAT/LE07/C01/T1\")\n",
+    "        Landsat_img = ee.ImageCollection(\"LANDSAT/LE07/C01/T1_TOA\")\n",
     "        ND_formula = {'NDVI':['B4','B3'],\n",
     "                      'NDBI':['B5','B4'],\n",
     "                      'EVI':\"2.5 * ((b('B4')-b('B3'))*1.0 / (b('B4')*1.0 + 6.0 * b('B3') - 7.5 * b('B1') + 1.0))\"}\n",
     "\n",
     "    else:\n",
-    "        Landsat_img = ee.ImageCollection(\"LANDSAT/LC08/C01/T1\")\n",
+    "        Landsat_img = ee.ImageCollection(\"LANDSAT/LC08/C01/T1_TOA\")\n",
     "        ND_formula = {'NDVI':['B5','B4'],\n",
     "                          'NDBI':['B6','B5'],\n",
     "                          'EVI':\"2.5 * ((b('B5')-b('B4'))*1.0 / (b('B5')*1.0 + 6.0 * b('B4') - 7.5 * b('B2') + 1.0))\"}\n",
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
