Restore Arcpy 50K sample

--- a/Process_1_Prepare_sample_point/Sub_Process_2_Create_Samples_from_50000/Python_Script/Version_1_arcpy_Sampling_From_50K.ipynb
+++ b/Process_1_Prepare_sample_point/Sub_Process_2_Create_Samples_from_50000/Python_Script/Version_1_arcpy_Sampling_From_50K.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-=======
-   "execution_count": 1,
->>>>>>> dcd15295792fa29333908d0c5970cdb746157828
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,89 +28,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculate the area percentage of each-NDVI value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### First access the points that have extracted NDVI value with"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-=======
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
->>>>>>> dcd15295792fa29333908d0c5970cdb746157828
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Extract_value_2005_2007_50K.shp',\n",
-       " 'Extract_value_2008_2010_50K.shp',\n",
-       " 'Extract_value_2011_2013_50K.shp',\n",
-       " 'Extract_value_2014_2016_50K.shp',\n",
-       " 'Extract_value_2017_2019_50K.shp']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# Determine the path to point_with_NDVI_value\n",
     "\n",
@@ -133,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +81,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculate the frequency of the NDVI value in each 50K_point shp"
+    "### Calculate the frequency of the NDVI value in each 50K_point shp¶\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,12 +117,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compute how many points should be selected according to NDVI frequency"
+    "### Compute how many points should be selected according to NDVI frequency¶\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,8 +140,7 @@
     "for name in  Point_with_NDVI:  \n",
     "    \n",
     "    # for each NDVI frequency, select 1/5 of them.\n",
-    "    NDVI_frequency_df[f'{name}_ratio'] = NDVI_frequency_df[name].apply(lambda x: int(x/50000*10000))\n",
-    "    "
+    "    NDVI_frequency_df[f'{name}_ratio'] = NDVI_frequency_df[name].apply(lambda x: int(x/50000*10000))"
    ]
   },
   {
@@ -239,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,8 +191,7 @@
     "    \n",
     "    \n",
     "    # updata the smaple dictionary\n",
-    "    sample_CID[point] = CID_list\n",
-    "        "
+    "    sample_CID[point] = CID_list"
    ]
   },
   {
@@ -287,27 +206,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exporting Test_2005_2007_10K.shp\n",
-      "Exporting Test_2008_2010_10K.shp\n",
-      "Exporting Test_2011_2013_10K.shp\n",
-      "Exporting Test_2014_2016_10K.shp\n",
-      "Exporting Test_2017_2019_10K.shp\n"
-     ]
-    }
-   ],
    "source": [
-    "# set the workspace\n",
     "arcpy.env.workspace = '../Step_2_Extract_NDVI_to_point/'\n",
     "arcpy.env.overwriteOutput = True\n",
     "\n",
@@ -353,55 +252,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -420,11 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.8.2"
-=======
-   "version": "3.6.8"
->>>>>>> dcd15295792fa29333908d0c5970cdb746157828
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
