--- a/Process_2_GEE_Python_Classification/Sub_Process_2_Extract_Fourier_Landsat_Supply_value_to_sample_pts/Extract_img_value_to_sample_points_and_calculate_accuracy.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_2_Extract_Fourier_Landsat_Supply_value_to_sample_pts/Extract_img_value_to_sample_points_and_calculate_accuracy.ipynb
@@ -51,33 +51,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The default supplementary data a Zero img, change accordingly when classify other years imgs\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from BackGround_modules.Class_1_Make_fourier_imgs import Make_Fourier\n",
-    "from BackGround_modules.Class_2_Classify_Fourier_Img import Classification\n",
-    "from BackGround_modules.Class_3_Calculate_the_accuracy import Accuracy_assesment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,41 +63,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define the num which represent the true number of verified sample-point sets\n",
+    "num = 4\n",
+    "\n",
+    "\n",
     "# define the year range\n",
     "year_start = [f'{i}-01-01' for i in range(1987,2020,3)]\n",
     "year_end   = [f'{i}-12-31' for i in range(1989,2020,3)]\n",
     "\n",
-    "year_range = list(zip(year_start,year_end))\n",
+    "year_range = list(zip(year_start,year_end))[-num:]\n",
+    "year_name_all  = list([f'{span[0]}_{span[1]}' for span in zip(range(1987,2020,3),range(1989,2020,3)) ])\n",
+    "year_name = year_name_all[-num:]\n",
+    "\n",
     "\n",
     "# import the research area boundary\n",
     "North_China_Plain = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain/0_1_North_China_Plain_Full\")\n",
     "\n",
     "# import verified points\n",
-    "Verified_Point_2017_2019   = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_2017_2019\")"
+    "Verified_Point   = [ee.FeatureCollection(f\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_{year}\")\n",
+    "                              for year in year_name[-num:] ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('1987-01-01', '1989-12-31'),\n",
-       " ('1990-01-01', '1992-12-31'),\n",
-       " ('1993-01-01', '1995-12-31'),\n",
-       " ('1996-01-01', '1998-12-31'),\n",
-       " ('1999-01-01', '2001-12-31'),\n",
-       " ('2002-01-01', '2004-12-31'),\n",
-       " ('2005-01-01', '2007-12-31'),\n",
-       " ('2008-01-01', '2010-12-31'),\n",
+       "[('2008-01-01', '2010-12-31'),\n",
        " ('2011-01-01', '2013-12-31'),\n",
        " ('2014-01-01', '2016-12-31'),\n",
        " ('2017-01-01', '2019-12-31')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,6 +106,33 @@
    "source": [
     "year_range"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2008_2010', '2011_2013', '2014_2016', '2017_2019']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -149,53 +150,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import Landsat img\n",
-    "Landsat_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Cloud_Free_Img/Cloud_Free_2017_2019\").clip(North_China_Plain)\n",
+    "Landsat_img = [ee.Image(f\"users/wang8052664/Cloud_Free_Img/Landsat_cloud_free_{year}\")\\\n",
+    "                 .clip(North_China_Plain)  for year in year_name]\n",
     "\n",
     "# import Fourier img   \n",
-    "Fourier_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Fourier_pixels/Fourier_Range_3_Year_2017_2019\").clip(North_China_Plain)\n",
-    "\n",
-    "# Import the Sentinel img\n",
-    "# Sentinel_img =  ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Sentinel_2019_mean\")\n",
-    "# Sentinel_V_H =  ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Year_2017_2018_Sentinel_V_H\")\n",
-    "# Sentinel_img =  Sentinel_img.select(['VV','VH']).addBands(Sentinel_V_H)\n",
+    "Fourier_img_all = [ee.Image(f\"users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_{year}_harmonic_3\")\\\n",
+    "                 .clip(North_China_Plain)  for year in year_name_all[:6]] + \\\n",
+    "                  [ee.Image(f\"users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_{year}_harmonic_3\")\\\n",
+    "                     .clip(North_China_Plain)  for year in year_name_all[6:]] \n",
+    "      \n",
+    "Fourier_img = Fourier_img_all\n",
     "\n",
     "# Import the Index-mean Img\n",
-    "NDVI_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Year_2017_2019_Spectrum_NDVI\").rename('Nomalized_NDVI')\n",
-    "NDBI_img = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Year_2017_2019_Spectrum_NDBI\").rename('Nomalized_NDBI')\n",
-    "EVI_img  = ee.Image(\"users/wangjinzhulala/North_China_Plain_Python/Supply_img/Year_2017_2019_Spectrum_EVI\").rename('Nomalized_EVI')"
+    "NDVI_img = [ee.Image(f\"users/wensomone666/Jinzhu/Mean_NDVI/Year_{year}_Mean_NDVI\").rename('Mean_NDVI')  \n",
+    "            for year in year_name ]\n",
+    "NDBI_img = [ee.Image(f\"users/wensomone666/Jinzhu/Mean_NDVI/Year_{year}_Mean_NDBI\").rename('Mean_NDBI')  \n",
+    "            for year in year_name ]\n",
+    "EVI_img  = [ee.Image(f\"users/wensomone666/Jinzhu/Mean_NDVI/Year_{year}_Mean_EVI\").rename('Mean_EVI')  \n",
+    "            for year in year_name ]\n",
+    "\n",
+    "# stack Landsat_Fourier_Nomalized together\n",
+    "Stack_img = [ee.Image(img) for img in zip(Landsat_img,Fourier_img,NDVI_img,NDBI_img,EVI_img)][-num:]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# put all band names together\n",
-    "Overlay_img      = ee.Image([Fourier_img,NDVI_img,NDBI_img,EVI_img])\n",
-    "Overlay_img_band = Overlay_img.bandNames().getInfo()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import Nomalized-diff img\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -206,22 +187,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Sample_extract_img = ee.Image([Landsat_img,Fourier_img]).sampleRegions(collection = Verified_Point_2017_2019,\n",
-    "                                                                       \n",
-    "                                                                       # [Built] is the colum that holds visualy \n",
-    "                                                                       # interpreted information on sample points\n",
-    "                                                                       properties = ['Built'], \n",
-    "                                                                       \n",
-    "                                                                       scale      = 30, \n",
-    "                                                                       geometries = True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -229,55 +194,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample_2008_2010_extract_Landsat_Fourier_Normalized_img\n",
+      "Sample_2011_2013_extract_Landsat_Fourier_Normalized_img\n",
+      "Sample_2014_2016_extract_Landsat_Fourier_Normalized_img\n",
+      "Sample_2017_2019_extract_Landsat_Fourier_Normalized_img\n"
+     ]
+    }
+   ],
    "source": [
     "# define the gee-asset path for exporting\n",
     "path = 'users/wangjinzhulala/North_China_Plain_Python/Sample_with_Landsat_Fourier_Nomalized_img_value'\n",
     "\n",
-    "# exporting\n",
-    "task = ee.batch.Export.table.toAsset(   collection  = Sample_extract_img,\n",
-    "                                        description = f'Exporting sample {year_name} with img values',\n",
-    "                                        assetId     = f'{path}/Sample_{year_name}_extract_Landsat_Fourier_Normalized_img')\n",
     "\n",
-    "task.start()"
+    "for year,img,sample in zip(year_name,Stack_img,Verified_Point):\n",
+    "    \n",
+    "    \n",
+    "    Ext_sample = img.sampleRegions(collection=sample, properties=['Built'], scale=30, geometries=True) \n",
+    "    \n",
+    "    # exporting\n",
+    "    task = ee.batch.Export.table.toAsset(   collection  = Ext_sample,\n",
+    "                                            description = f'Sample_{year}_extract_Landsat_Fourier_Normalized_img',\n",
+    "                                            assetId     = f'{path}/Sample_{year}_extract_Landsat_Fourier_Normalized_img')\n",
+    "\n",
+    "    task.start()\n",
+    "    \n",
+    "    # print out the process\n",
+    "    print(f'Sample_{year}_extract_Landsat_Fourier_Normalized_img')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -303,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
