--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "['2005_2007', '2008_2010', '2011_2013', '2014_2016', '2017_2019']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,13 +106,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import verified points\n",
-    "Verified_Point   = [ee.FeatureCollection(f\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_{year}\")\n",
+    "Verified_Point = [ee.FeatureCollection(f\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_{year}\")\n",
     "                              for year in year_name ]\n",
+    "\n",
+    "Zone_sample    = ee.FeatureCollection(\"users/Jinzhu_Deakin/North_China_Plain/Verified_points_with_zone_sample/Zone_Sample\")\n",
     "\n",
     "# import north_china_plain boundary\n",
     "North_China_Plain = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")"
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,40 +194,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample_2017_2019_extract_Landsat_Fourier_Normalized_img\n",
-      "Sample_2014_2016_extract_Landsat_Fourier_Normalized_img\n",
-      "Sample_2011_2013_extract_Landsat_Fourier_Normalized_img\n",
-      "Sample_2008_2010_extract_Landsat_Fourier_Normalized_img\n",
-      "Sample_2005_2007_extract_Landsat_Fourier_Normalized_img\n"
+      "Zone/Sample_2017_2019_extract_Landsat_Fourier_Normalized_img\n",
+      "Zone/Sample_2014_2016_extract_Landsat_Fourier_Normalized_img\n",
+      "Zone/Sample_2011_2013_extract_Landsat_Fourier_Normalized_img\n",
+      "Zone/Sample_2008_2010_extract_Landsat_Fourier_Normalized_img\n",
+      "Zone/Sample_2005_2007_extract_Landsat_Fourier_Normalized_img\n"
      ]
     }
    ],
    "source": [
     "# define the gee-asset path for exporting\n",
-    "path = 'users/wangjinzhulala/North_China_Plain_Python/Sample_with_Landsat_Fourier_Nomalized_img_value'\n",
+    "path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized'\n",
     "\n",
     "\n",
     "for year,img,sample in list(zip(year_name,Stack_img,Verified_Point))[::-1]:\n",
     "    \n",
     "    \n",
-    "    Ext_sample = img.sampleRegions(collection=sample, properties=['Built'], scale=30, geometries=True) \n",
+    "    Ext_sample = img.sampleRegions(collection=sample,      properties=['Built'], scale=30, geometries=True) \n",
+    "    Ext_zone   = img.sampleRegions(collection=Zone_sample, properties=['Built'], scale=30, geometries=True)\n",
     "    \n",
     "    # exporting\n",
-    "    task = ee.batch.Export.table.toAsset(   collection  = Ext_sample,\n",
-    "                                            description = f'Sample_{year}_extract_Landsat_Fourier_Normalized_img',\n",
-    "                                            assetId     = f'{path}/Sample_{year}_extract_Landsat_Fourier_Normalized_img')\n",
+    "    task_sample = ee.batch.Export.table.toAsset(   collection  = Ext_sample,\n",
+    "                                            description = f'Verified_point_{year}_extract_Landsat_Fourier_Normalized_img',\n",
+    "                                            assetId     = f'{path}/Verified_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
     "\n",
-    "    task.start()\n",
+    "    \n",
+    "    \n",
+    "    task_zone = ee.batch.Export.table.toAsset(   collection  = Ext_zone,\n",
+    "                                            description = f'Zone_point_{year}_extract_Landsat_Fourier_Normalized_img',\n",
+    "                                            assetId     = f'{path}/Zone_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
+    "    \n",
+    "    task_sample.start()\n",
+    "    task_zone.start()\n",
     "    \n",
     "    # print out the process\n",
-    "    print(f'Sample_{year}_extract_Landsat_Fourier_Normalized_img')"
+    "    print(f'Zone/Sample_{year}_extract_Landsat_Fourier_Normalized_img')"
    ]
   },
   {
@@ -252,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
