--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_2_Accuracy_bands_combination.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_2_Accuracy_bands_combination.ipynb
@@ -46,9 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Class_3_Calculate_the_accuracy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-2e799dd3a2e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mBackGround_modules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mClass_2_Classify_Fourier_Img\u001b[0m   \u001b[0;32mimport\u001b[0m \u001b[0mClassification\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mBackGround_modules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mClass_3_Calculate_the_accuracy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAccuracy_assesment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/North_China_Plain_GEE_Organized/Process_2_GEE_Python_Classification/BackGround_modules/Class_2_Classify_Fourier_Img.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    213\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 215\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mClass_3_Calculate_the_accuracy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAccuracy_assesment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    216\u001b[0m \u001b[0mAccuracy_assesment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_sample_classified\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStp_1_Calculate_Accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Class_3_Calculate_the_accuracy'"
+     ]
+    }
+   ],
    "source": [
     "from BackGround_modules.Class_2_Classify_Fourier_Img   import Classification\n",
     "from BackGround_modules.Class_3_Calculate_the_accuracy import Accuracy_assesment"
@@ -70,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +118,7 @@
        " ('2005-01-01', '2007-12-31')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +138,7 @@
        "['2017_2019', '2014_2016', '2011_2013', '2008_2010', '2005_2007']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,15 +170,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'users/wangjinzhulala/North_China_Plain_Python/Sample_with_Landsat_Fourier_Nomalized_img_value'\n",
+    "path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized'\n",
     "\n",
-    "Sample_with_value = [ee.FeatureCollection(f'{path}/Sample_{year}_extract_Landsat_Fourier_Normalized_img')\n",
-    "                    for year in year_name]"
+    "Sample_with_value = [ee.FeatureCollection(f'{path}/Verified_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
+    "                    for year in year_name]        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bands = list(ee.FeatureCollection(f'{path}/Verified_point_2017_2019_extract_Landsat_Fourier_Normalized_img').first().getInfo()['properties'].keys())\n",
+    "    \n",
+    "# get the Landsat_band\n",
+    "Landsat_re   = re.compile(r'^B\\d')\n",
+    "Landsat_band = list(filter(Landsat_re.match,bands))\n",
+    "\n",
+    "# get the Fourier_band\n",
+    "Fourier_re   = re.compile(r'^EVI|NDBI|NDVI')\n",
+    "Fourier_band = list(filter(Fourier_re.match,bands))\n",
+    "\n",
+    "# get the Mean_Normalized band\n",
+    "Mean_re         = re.compile(r'^Mean')\n",
+    "Mean_Normalized = list(filter(Mean_re.match,bands))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['B1', 'B10', 'B11', 'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B9']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Landsat_band"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['EVI_constant',\n",
+       " 'EVI_cos_1',\n",
+       " 'EVI_cos_2',\n",
+       " 'EVI_cos_3',\n",
+       " 'EVI_sin_1',\n",
+       " 'EVI_sin_2',\n",
+       " 'EVI_sin_3',\n",
+       " 'EVI_t',\n",
+       " 'NDBI_constant',\n",
+       " 'NDBI_cos_1',\n",
+       " 'NDBI_cos_2',\n",
+       " 'NDBI_cos_3',\n",
+       " 'NDBI_sin_1',\n",
+       " 'NDBI_sin_2',\n",
+       " 'NDBI_sin_3',\n",
+       " 'NDBI_t',\n",
+       " 'NDVI_constant',\n",
+       " 'NDVI_cos_1',\n",
+       " 'NDVI_cos_2',\n",
+       " 'NDVI_cos_3',\n",
+       " 'NDVI_sin_1',\n",
+       " 'NDVI_sin_2',\n",
+       " 'NDVI_sin_3',\n",
+       " 'NDVI_t']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Fourier_band"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -234,7 +352,6 @@
     "            \n",
     "            # Instatiate the class with a name\n",
     "            Accuracy_assess = Classification( year_name      = year,\n",
-    "                                              Input_img      = 0,\n",
     "                                              input_band     = combo,\n",
     "                                              Verified_point = fe,\n",
     "                                              Tree_num       = tree)\n",
@@ -363,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
